@@ -1,3 +1,7 @@
+2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
+	* test/config.rb, test/test_dbi.rb, test/test_describe.rb,
+	  test/test_oci8.rb: add 'purge' option to 'drop table' statement.
+
 2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oraconf.rb: fix for FreeBSD oracle8-client port.
 	   Not all tests are passed on FreeBSD yet.
